--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@types/react": "^16.9.0",
 		"@types/react-dom": "^16.9.0",
 		"fabric": "^3.6.3",
+		"file-saver": "^2.0.2",
 		"font-picker-react": "^3.5.1",
 		"react": "^16.13.1",
 		"react-bootstrap": "^1.0.1",
@@ -45,6 +46,7 @@
 	},
 	"devDependencies": {
 		"@types/fabric": "^3.6.2",
+		"@types/file-saver": "^2.0.1",
 		"@types/react-bootstrap": "^1.0.1"
 	}
 }
