--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
 		"@types/jest": "^24.0.0",
 		"@types/node": "^12.0.0",
 		"@types/react": "^16.9.0",
+		"@types/react-color": "^3.0.6",
 		"@types/react-dom": "^16.9.0",
 		"fabric": "^3.6.3",
 		"file-saver": "^2.0.2",
 		"font-picker-react": "^3.5.1",
 		"react": "^16.13.1",
 		"react-bootstrap": "^1.0.1",
+		"react-color": "^2.19.3",
 		"react-dom": "^16.13.1",
 		"react-scripts": "3.4.1",
 		"serve": "^14.2.0",
@@ -29,7 +31,7 @@
 		"build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
 		"test": "NODE_OPTIONS=--openssl-legacy-provider react-scripts test",
 		"eject": "NODE_OPTIONS=--openssl-legacy-provider react-scripts eject",
-		"start:prod": "serve -s build -l 3333"
+		"start:prod": "yarn serve -s build -l 3333"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
